fix: horizontal scrolling

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,8 +26,8 @@ body {
       }
 
       main {
-        width: 100vw;
-        height: 100vh;
+        // width: 100vw;
+        // height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
